Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/EnumAsIdentifier.out
EnumAsIdentifier.java:11:9: compiler.err.enum.as.identifier
1 error
